--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    steps:
+    steps: Checkout
     - uses: actions/checkout@v4
 
     - name: Set up Go
@@ -26,3 +26,19 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrerts.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Build and Push
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        image: mohitpanchariya/go-ci
+        tags: mohitpanchariya/go-ci:latest
