--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    steps: Checkout
+    steps:
+    - name: Checkout
     - uses: actions/checkout@v4
 
     - name: Set up Go
