--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,18 +27,10 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+    - name: Build and Push Docker Image
+      uses: docker/docker-build-push@v4
       with:
+        image: mohitpanchariya/go-ci:v1
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-
-    - name: Build and Push
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        image: mohitpanchariya/go-ci
-        tags: mohitpanchariya/go-ci:latest
