--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,8 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
-        image: mohitpanchariya/go-ci:v1
+        image: mohitpanchariya/go-ci
+        tags: mohitpanchariya/go-ci:latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
