--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,12 +27,15 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v6
       with:
         push: true
         image: mohitpanchariya/go-ci
         tags: mohitpanchariya/go-ci:latest
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
